--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -63,6 +63,6 @@ jobs:
           git submodule init
           git submodule update --recursive
           ./configure --target-list=x86_64-softmmu --disable-capstone
-          echo 'make -j'
-          make -j
+          echo 'make'
+          make
           echo 'make ok'
