--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -58,7 +58,7 @@ jobs:
           pacman -Sy --noconfirm mingw-w64-x86_64-glib2 mingw-w64-x86_64-gtk3 mingw-w64-x86_64-SDL2
           pacman -Sy --noconfirm ninja
           pacman -Sy --noconfirm mingw-w64-x86_64-diffutils
-          git clone git://git.qemu-project.org/qemu.git --branch stable-6.1 --single-branch
+          git clone git://git.qemu-project.org/qemu.git
           cd qemu
           git submodule init
           git submodule update --recursive
