--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -62,7 +62,7 @@ jobs:
           cd qemu
           git submodule init
           git submodule update --recursive
-          ./configure --target-list=x86_64-softmmu --disable-capstone --disable-werror --disable-stack-protector 
+          ./configure --target-list=x86_64-softmmu --disable-capstone
           echo 'make'
           make
           echo 'make ok'
