--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -16,6 +16,11 @@ jobs:
       run:
         shell: msys2 {0}
     steps:
+      - name: Branch name
+        id: branch_name
+        run: |
+          echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
+
       - uses: msys2/setup-msys2@v2
         with:
           update: true
@@ -28,33 +33,12 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Install 001
-        if: false
-        run: |
-          pacman -Syu
-          pacman -Su
-          pacman -S mingw-w64-x86_64-toolchain --noconfirm
-          pacman -S python --noconfirm
-          pacman -S ninja --noconfirm
-          pacman -S mingw-w64-x86_64-glib2 --noconfirm
-          pacman -S mingw-w64-x86_64-gtk3 --noconfirm
-          pacman -S mingw-w64-x86_64-SDL2 --noconfirm
-          git clone git://git.qemu-project.org/qemu.git --branch stable-6.1 --single-branch
-          # wget https://github.com/qemu/qemu/archive/refs/tags/v6.2.0.tar.gz
-          # tar -xzf v6.2.0.tar.gz
-          cd qemu
-          git submodule update --init ui/keycodemapdb
-          git submodule update --init capstone
-          git submodule update --init dtc
-          ./configure --enable-gtk --enable-sdl --target-list=x86_64-softmmu --disable-werror --disable-stack-protector --disable-capstone
-          make
-          qemu/x86_64-softmmu ./qemu-system-x86_64 -L ./../pc-bios
-
-      - name: Install 002
+      - name: Build
         run: |
           ls -lt /mingw64/bin/
           BUILD_PATH=$HOME/QEMU-bin/
-          mkdir $BUILD_PATH
+          mkdir bin
+          mkdir libs
           pacman -Suy --noconfirm
           pacman -Sy --noconfirm mingw-w64-x86_64-gcc python
           pacman -Sy --noconfirm mingw-w64-x86_64-toolchain
@@ -66,18 +50,20 @@ jobs:
           git reset --hard 44f28df24767cf9dca1ddc9b23157737c4cbb645
           git submodule init
           git submodule update --recursive
-          ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone
+          ./configure --prefix=../bin --disable-capstone
           echo 'make'
           make
           echo 'make ok'
           make install
           echo 'make install ok'
-          ls -lt /mingw64/bin/
-          cp /mingw64/bin/*.dll $BUILD_PATH
-          echo 'cp ok'
-          ls -l $BUILD_PATH
           cd ../
-          tar -czvf qemu-6.2-5.tgz $BUILD_PATH
+          cp /mingw64/bin/*.dll libs/
+          mv bin/share .
+      
+      - name: Compress
+        run: |
+          tar -czvf "qemu-${{ steps.branch_name.outputs.TAG }}-windows-x86_64.tgz" libs bin share
+      
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
