--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        arch: [x86_64, arm64]
+        arch: [x86_64]
         platform: [macos]
     steps:
       - name: Branch name
@@ -20,7 +20,7 @@ jobs:
         run: |
           echo ::set-output name=QEMU_VERSION::$(echo ${GITHUB_REF#refs/tags/} | cut -d - -f 1) && \
           echo ::set-output name=TAG::${GITHUB_REF#refs/tags/} && \
-          case `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` in 'cocoa') echo ::set-output name=VARIANT::$(echo '+cocoa');; 'gtk3') echo ::set-output name=VARIANT::$(echo '+gtk3 +sdl2 -cocoa');; esac
+          case `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` in 'cocoa') echo ::set-output name=VARIANT::$(echo '+cocoa');; 'gtk3') echo ::set-output name=VARIANT::$(echo '+gtk3 +sdl2');; esac
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -63,10 +63,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo chown runner /opt/local/etc/macports/macports.conf
-          sudo echo 'build_arch ${{ matrix.arch }}' >> /opt/local/etc/macports/macports.conf
           export PATH="/opt/local/bin:$PATH"
-          sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} ${{ steps.branch_name.outputs.VARIANT }}
+          sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} +curses +usb +curl +vnc +vde +lzo +lzfse +snappy +zstd +ssh ${{ steps.branch_name.outputs.VARIANT }}
           mkdir bin
           cp /opt/local/bin/qemu-system-x86_64 bin/
           cp /opt/local/bin/qemu-system-aarch64 bin/
