--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        arch: [x86_64]
+        arch: [arm64, x86_64]
         platform: [macos]
     steps:
       - name: Branch name
