--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -66,7 +66,7 @@ jobs:
           sudo chown runner /opt/local/etc/macports/macports.conf 
           sudo echo 'build_arch ${{ matrix.arch }}' >> /opt/local/etc/macports/macports.conf
           export PATH="/opt/local/bin:$PATH"
-          sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} +curses +universal ${{ steps.branch_name.outputs.VARIANT }}
+          sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} +curses ${{ steps.branch_name.outputs.VARIANT }}
           mkdir bin
           cp /opt/local/bin/qemu-system-x86_64 bin/
           cp /opt/local/bin/qemu-system-aarch64 bin/
@@ -86,6 +86,11 @@ jobs:
       - name: Compress
         run: |
           tar -czvf `echo "qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz" | sed 's/ //g'` libs bin share
+
+      - name: always
+        if: always()
+        run: |
+          cat /opt/local/var/macports/build/_opt_local_var_macports_sources_rsync.macports.org_macports_release_tarballs_ports_graphics_fontconfig/fontconfig/work/fontconfig-2.13.1/config.log
 
       - name: Release
         uses: softprops/action-gh-release@v1
