--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        arch: [arm64, x86_64]
+        arch: [x86_64]
         platform: [macos]
     steps:
       - name: Branch name
@@ -63,11 +63,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo chown runner /opt/local/etc/macports/macports.conf 
-          sudo echo 'build_arch ${{ matrix.arch }}' >> /opt/local/etc/macports/macports.conf
           export PATH="/opt/local/bin:$PATH"
-          sudo port install shared-mime-info +universal fontconfig +universal 
-          sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} +curses ${{ steps.branch_name.outputs.VARIANT }}
+          sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} +curses +usb +curl +vnc +vde +lzo +lzfse +snappy +zstd +ssh ${{ steps.branch_name.outputs.VARIANT }}
           mkdir bin
           cp /opt/local/bin/qemu-system-x86_64 bin/
           cp /opt/local/bin/qemu-system-aarch64 bin/
@@ -83,13 +80,8 @@ jobs:
           echo '@@@@@@@@@@@@@@@@@@@'
           chmod +x scripts/fix_mac.sh
           scripts/fix_mac.sh
-
-      - name: always
-        if: always()
-        run: |
-          cat /opt/local/var/macports/build/_opt_local_var_macports_sources_rsync.macports.org_macports_release_tarballs_ports_graphics_fontconfig/fontconfig/work/fontconfig-2.13.1/config.log
       
-      - name: Compress 
+      - name: Compress
         run: |
           tar -czvf `echo "qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz" | sed 's/ //g'` libs bin share
 
