--- a/.github/workflows/build-macos-arm.yaml
+++ b/.github/workflows/build-macos-arm.yaml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Macports 0
         run: |
-           wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
-           sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target /
+           wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-12-Monterey.pkg
+           sudo installer -pkg ./MacPorts-2.7.1-12-Monterey.pkg -target /
 
       - name: Install dependencies
         run: |
