--- a/.github/workflows/build-macos-arm.yaml
+++ b/.github/workflows/build-macos-arm.yaml
@@ -34,9 +34,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-         # sudo chown runner /opt/local/etc/macports/macports.conf 
-         # sudo echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
-          export PATH="/opt/local/bin:$PATH"
+          # sudo chown runner /opt/local/etc/macports/macports.conf 
+          # sudo echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
+          # export PATH="/opt/local/bin:$PATH"
+          sudo port clean qemu
           sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} ${{ steps.branch_name.outputs.VARIANT }}          
           mkdir bin 
           cp /opt/local/bin/qemu-system-x86_64 bin/
