--- a/.github/workflows/build-macos-arm.yaml
+++ b/.github/workflows/build-macos-arm.yaml
@@ -38,7 +38,7 @@ jobs:
           # sudo echo 'build_arch arm64' >> /opt/local/etc/macports/macports.conf
           # export PATH="/opt/local/bin:$PATH"
           sudo port -f activate gettext-tools-libs
-          sudo port -f activate gettext
+          sudo port -f activate gettext @0.21_0
           sudo port clean qemu
           sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} ${{ steps.branch_name.outputs.VARIANT }}
           mkdir bin 
