--- a/.github/workflows/build-macos-arm.yaml
+++ b/.github/workflows/build-macos-arm.yaml
@@ -40,6 +40,7 @@ jobs:
           sudo port -f activate gettext-tools-libs
           sudo port -f activate gettext @0.21_0
           sudo port clean qemu
+          sudo port uninstall qemu
           sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} ${{ steps.branch_name.outputs.VARIANT }}
           mkdir bin 
           cp /opt/local/bin/qemu-system-x86_64 bin/
@@ -48,7 +49,7 @@ jobs:
           mkdir -p share
           ls -l /opt/local/share/ 
           echo ':::::::::::::::::'
-          #sudo chown -R runner /opt/local/share/qemu
+          sudo chown -R oleg /opt/local/share/qemu
           cp -r /opt/local/share/qemu share/
           #ls -l /usr/local/share/qemu
           echo '#################'
