--- a/.github/workflows/build-macos-arm.yaml
+++ b/.github/workflows/build-macos-arm.yaml
@@ -57,6 +57,9 @@ jobs:
           echo '@@@@@@@@@@@@@@@@@@@'
           chmod +x scripts/fix_mac.sh
           scripts/fix_mac.sh
+          codesign -f -s - bin/qemu-system-x86_64
+          codesign -f -s - bin/qemu-system-aarch64
+          codesign -f -s - bin/qemu-img
       
       - name: Compress
         run: |
