--- a/.github/workflows/build-macos-arm.yaml
+++ b/.github/workflows/build-macos-arm.yaml
@@ -44,7 +44,7 @@ jobs:
           sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} ${{ steps.branch_name.outputs.VARIANT }}
           mkdir bin 
           cp /opt/local/bin/qemu-system-x86_64 bin/
-          cp /opt/local/bin/qemu-system-aarch64 bin/
+          #cp /opt/local/bin/qemu-system-aarch64 bin/
           cp /opt/local/bin/qemu-img bin/
           mkdir -p share
           ls -l /opt/local/share/ 
@@ -58,9 +58,10 @@ jobs:
           chmod +x scripts/fix_mac.sh
           scripts/fix_mac.sh
           codesign -f -s - bin/qemu-system-x86_64
-          codesign -f -s - bin/qemu-system-aarch64
+          #codesign -f -s - bin/qemu-system-aarch64
           codesign -f -s - bin/qemu-img 
-      
+          cp /opt/local/bin/qemu-system-aarch64 bin/
+
       - name: Compress
         run: |
           tar -czvf `echo "qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz" | sed 's/ //g'` libs bin share
