--- a/.github/workflows/build-macos-arm.yaml
+++ b/.github/workflows/build-macos-arm.yaml
@@ -43,9 +43,9 @@ jobs:
           sudo port uninstall qemu
           sudo port install qemu @${{ steps.branch_name.outputs.QEMU_VERSION }} ${{ steps.branch_name.outputs.VARIANT }}
           mkdir bin 
-          cp /opt/local/bin/qemu-system-x86_64 bin/
+          #cp /opt/local/bin/qemu-system-x86_64 bin/
           #cp /opt/local/bin/qemu-system-aarch64 bin/
-          cp /opt/local/bin/qemu-img bin/
+          #cp /opt/local/bin/qemu-img bin/
           mkdir -p share
           ls -l /opt/local/share/ 
           echo ':::::::::::::::::'
@@ -57,11 +57,13 @@ jobs:
           echo '@@@@@@@@@@@@@@@@@@@'
           chmod +x scripts/fix_mac.sh
           scripts/fix_mac.sh
-          codesign -f -s - bin/qemu-system-x86_64
+          #codesign -f -s - bin/qemu-system-x86_64
           #codesign -f -s - bin/qemu-system-aarch64
-          codesign -f -s - bin/qemu-img 
-          cp /opt/local/bin/qemu-system-aarch64 bin/ 
-
+          #codesign -f -s - bin/qemu-img 
+          cp /opt/local/bin/qemu-system-x86_64 bin/
+          cp /opt/local/bin/qemu-system-aarch64 bin/
+          cp /opt/local/bin/qemu-img bin/
+          
       - name: Compress
         run: |
           tar -czvf `echo "qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz" | sed 's/ //g'` libs bin share
