--- a/.github/workflows/build-macos-utm.yaml
+++ b/.github/workflows/build-macos-utm.yaml
@@ -1,10 +1,10 @@
-name: Macos gpu
+name: Macos UTM
 
 on:
   push:
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+-gpu-cocoa"
-      - "[0-9]+.[0-9]+.[0-9]+-gpu-sdl"
+      - "[0-9]+.[0-9]+.[0-9]+-utm-cocoa"
+      - "[0-9]+.[0-9]+.[0-9]+-utm-sdl"
 
 jobs:
   build:
