--- a/.github/workflows/build-windows-cygwin.yaml
+++ b/.github/workflows/build-windows-cygwin.yaml
@@ -54,15 +54,18 @@ jobs:
 
       - name: Build
         run: |
+          git clone https://github.com/kymano-app/qemu.git
+          cd qemu
           BUILD_PATH=$HOME/QEMU-bin
           mkdir $HOME/QEMU-bin
           mkdir bin
           git clone git://git.qemu-project.org/qemu.git
           cd qemu
+          patch configure ../qemu-cygwin/configure.patch
           git reset --hard 44f28df24767cf9dca1ddc9b23157737c4cbb645
           git submodule init
           git submodule update --recursive
-          ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone --toolchain=msvc --target-os=openbsd --arch=x86_64 --enable-shared
+          ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone --target-os=openbsd --arch=x86_64 --enable-shared
           echo 'make'
           make
           echo 'make ok'
