--- a/.github/workflows/build-windows-cygwin.yaml
+++ b/.github/workflows/build-windows-cygwin.yaml
@@ -65,7 +65,7 @@ jobs:
           patch configure ../qemu-cygwin/configure.patch
           git submodule init
           git submodule update --recursive
-          ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone --target-os=openbsd --arch=x86_64 --enable-shared
+          ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone
           echo 'make'
           make
           echo 'make ok'
