--- a/.github/workflows/build-windows-cygwin.yaml
+++ b/.github/workflows/build-windows-cygwin.yaml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Install libs
         run: |
-          apt-cyg install gcc-core flexdll binutils cmake gcc-g++ automake autoconf libtool python flex bison coreutils libiconv libiconv-devel gettext po4a ncurses ninja genisoimage byacc libncurses-devel lynx gperf gettext-devel libreadline-devel  findutils-debuginfo wget libxml2-devel file-devel libtirpc-devel libjansson-devel pcre2 libpcre2-devel meson zlib-devel
+          apt-cyg install gcc-core binutils cmake gcc-g++ automake autoconf libtool python  bison coreutils libiconv libiconv-devel gettext ncurses ninja byacc libncurses-devel lynx gettext-devel libreadline-devel wget libxml2-devel file-devel libtirpc-devel libjansson-devel pcre2 libpcre2-devel meson zlib-devel libffi libffi-devel
       
       - name: Install glib2
         run: |
@@ -57,7 +57,6 @@ jobs:
           echo "cpu = 'x86_64'" >> cross
           echo "[built-in options]" >> cross
           echo "c_args = '-Wno-error=implicit-function-declaration'" >> cross
-          echo "c_link_args = '-lpcre2-8'" >> cross
           cat cross
 
           meson _build --cross-file=./cross                         
