--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -34,20 +34,26 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Build
+      - name: Install libs
         run: |
-          ls -lt /mingw64/bin/
-          BUILD_PATH=$HOME/QEMU-bin
-          mkdir bin
           pacman -Suy --noconfirm
           pacman -Sy --noconfirm mingw-w64-x86_64-gcc python
           pacman -Sy --noconfirm mingw-w64-x86_64-toolchain
           pacman -Sy --noconfirm mingw-w64-x86_64-glib2 mingw-w64-x86_64-gtk3 mingw-w64-x86_64-SDL2
           pacman -Sy --noconfirm ninja
           pacman -Sy --noconfirm mingw-w64-x86_64-diffutils
+
+      - name: Build
+        run: |
+          pwd
+          ls -l
+          BUILD_PATH=$HOME/QEMU-bin
+          mkdir bin
           git clone git://git.qemu-project.org/qemu.git
           cd qemu
           git reset --hard 44f28df24767cf9dca1ddc9b23157737c4cbb645
+          patch util/qemu-sockets.c qemu-win/util/qemu-sockets.c.patch
+          cp qemu-win/afunix.h util/
           git submodule init
           git submodule update --recursive
           ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone
