--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -53,7 +53,8 @@ jobs:
           cd qemu
           git reset --hard 44f28df24767cf9dca1ddc9b23157737c4cbb645
           patch util/qemu-sockets.c qemu-win/util/qemu-sockets.c.patch
-          cp qemu-win/afunix.h util/
+          patch chardev/char-socket.c qemu-win/chardev/char-socket.c.patch
+          cp qemu-win/afunix.h include/qemu/
           git submodule init
           git submodule update --recursive
           ./configure --prefix=$BUILD_PATH --target-list=x86_64-softmmu --disable-capstone
