--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -16,6 +16,14 @@ jobs:
       run:
         shell: msys2 {0}
     steps:
+
+      - name: Find
+        if: false
+        shell: pwsh 
+        run: |
+          Get-ChildItem -Path D:\ -Filter afunix.h -Recurse -ErrorAction SilentlyContinue -Force
+          Get-ChildItem -Path C:\ -Filter afunix.h -Recurse -ErrorAction SilentlyContinue -Force
+
       - name: Branch name
         id: branch_name
         shell: bash
@@ -36,7 +44,6 @@ jobs:
 
       - name: Install libs
         run: |
-          find / -name "afunix.h"
           pacman -Suy --noconfirm
           pacman -Sy --noconfirm mingw-w64-x86_64-gcc python
           pacman -Sy --noconfirm mingw-w64-x86_64-toolchain
