--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Cat
         shell: pwsh 
         run: |
-          dir C:\msys64\mingw64\x86_64-w64-mingw32
+          dir C:\msys64\mingw64\
           type C:\msys64\mingw64\x86_64-w64-mingw32\include\afunix.h
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\shared\afunix.h"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\shared\afunix.h"
