--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -20,6 +20,7 @@ jobs:
         shell: pwsh 
         run: |
           dir C:\msys64\mingw64\include\
+          dir "C:\Program Files (x86)"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\shared\afunix.h"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\shared\afunix.h"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.19041.0\shared\afunix.h"
