--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -17,6 +17,7 @@ jobs:
         shell: msys2 {0}
     steps:
       - name: Cat
+        if: false
         shell: pwsh 
         run: |
           dir C:\msys64\mingw64\include\
