--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -17,16 +17,15 @@ jobs:
         shell: msys2 {0}
     steps:
       - name: Cat
-        if: false
+        if: true
         shell: pwsh 
         run: |
           dir C:\msys64\mingw64\include\
-          dir "C:\Program Files (x86)"
+          dir "C:\Program Files (x86)\Windows Kits\10\"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\shared\afunix.h"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\shared\afunix.h"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.19041.0\shared\afunix.h"
           type "C:\Program Files (x86)\Windows Kits\10\Include\10.0.22000.0\shared\afunix.h"
-
 
       - name: Branch name
         id: branch_name
