--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -63,6 +63,7 @@ jobs:
           cd qemu
           git reset --hard 44f28df24767cf9dca1ddc9b23157737c4cbb645
           patch util/qemu-sockets.c ../qemu-win/util/qemu-sockets.c.patch
+          patch util/osdep.c ../qemu-win/util/osdep.c.patch
           patch chardev/char-socket.c ../qemu-win/chardev/char-socket.c.patch
           patch tests/unit/test-util-sockets.c ../qemu-win/tests/unit/test-util-sockets.c.patch
           git submodule init
